change api format of suggest all, it call both suggest all and get plan
