# backend/docs/swagger.yaml
@@ -710,18 +710,17 @@ paths:
       summary: User registration
       tags:
       - auth
-  /api/v1/comment/activity:
-    post:
+  /api/v1/comment/activity/{id}:
+    get:
       consumes:
       - application/json
       description: Get all comments for a specific activity
       parameters:
-      - description: Activity Details
-        in: body
-        name: activity
+      - description: Activity ID
+        in: path
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/dto.Activity'
+        type: string
       produces:
       - application/json
       responses:
@@ -732,19 +731,17 @@ paths:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/model.Comment'
-                  type: array
+                  $ref: '#/definitions/model.Comment'
               type: object
         "400":
-          description: Invalid activity
+          description: Invalid activity ID
           schema:
             $ref: '#/definitions/model.Response'
         "500":
           description: Internal server error
           schema:
             $ref: '#/definitions/model.Response'
-      summary: Get comments by activity
+      summary: Get comments by activity ID
       tags:
       - comment
   /api/v1/comment/create:
@@ -780,40 +777,6 @@ paths:
           schema:
             $ref: '#/definitions/model.Response'
       summary: Create a new comment
-      tags:
-      - comment
-  /api/v1/comment/trip/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get all comments for a specific trip
-      parameters:
-      - description: Trip ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Comments for the trip
-          schema:
-            allOf:
-            - $ref: '#/definitions/model.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/model.Comment'
-              type: object
-        "400":
-          description: Invalid trip ID
-          schema:
-            $ref: '#/definitions/model.Response'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/model.Response'
-      summary: Get comments by trip ID
       tags:
       - comment
   /api/v1/detail/accommodation/{id}:
@@ -1046,13 +1009,13 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: Suggested trip
           schema:
             allOf:
             - $ref: '#/definitions/model.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/dto.TripSuggestionRequest'
+                  $ref: '#/definitions/dto.TripDTOByDate'
               type: object
         "400":
           description: Bad Request
